syntax = "proto3";

option go_package = "github.com/eolinker/eosc/service";
package service;


message WorkerHelloRequest{
  string hello=1;
}

message WorkerHelloResponse{
  string hello=1;
  WorkerResource resource=3;
}

message WorkerDeleteRequest  {
  string id=1;
}

message WorkerSetRequest{
  string id=1;
  string profession=2;
  string name=3;
  string driver=4;
  bytes  body=5;
}

enum WorkerStatusCode{
  SUCCESS=0;
  FAIL=1;
  SKILL=2;
}
message WorkerResource{
  repeated int32 port=1;
}

message WorkerDeleteResponse{
  WorkerStatusCode status=1;
  string message=2;
  WorkerResource resource=3;
}

message WorkerSetResponse{
  WorkerStatusCode status=1;
  string message=2;
  WorkerResource resource=3;
}

service WorkerService{
  rpc deleteCheck(WorkerDeleteRequest)returns(WorkerDeleteResponse){};
  rpc setCheck(WorkerSetRequest)returns(WorkerSetResponse){};

  rpc delete(WorkerDeleteRequest)returns(WorkerDeleteResponse){};
  rpc set(WorkerSetRequest)returns(WorkerSetResponse){};

  rpc ping(WorkerHelloRequest)returns(WorkerHelloResponse){}
 }
